--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,50 +17,50 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:text="My Nanodegree Apps!"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
         android:id="@+id/button"
         style="@style/button_app"
         android:layout_marginTop="20dp"
-        android:text="Spotify Streamer"
-        android:onClick="spotifyToast" />
+        android:onClick="displayToast"
+        android:text="Spotify Streamer" />
 
     <Button
         android:id="@+id/button2"
         style="@style/button_app"
         android:layout_below="@+id/button"
-        android:text="Scores App"
-        android:onClick="scoresToast"/>
+        android:onClick="displayToast"
+        android:text="Scores App" />
 
     <Button
         android:id="@+id/button3"
         style="@style/button_app"
         android:layout_below="@+id/button2"
 
-        android:text="Library App"
-        android:onClick="libraryToast"/>
+        android:onClick="displayToast"
+        android:text="Library App" />
 
     <Button
         android:id="@+id/button4"
         style="@style/button_app"
         android:layout_below="@+id/button3"
-        android:text="Build it bigger"
-        android:onClick="biggerToast"/>
+        android:onClick="displayToast"
+        android:text="Build it bigger" />
 
     <Button
         android:id="@+id/button5"
         style="@style/button_app"
         android:layout_below="@+id/button4"
-        android:text="XYZ reader"
-        android:onClick="readerToast"/>
+        android:onClick="displayToast"
+        android:text="XYZ reader" />
 
     <Button
         android:id="@+id/button6"
         style="@style/button_app"
         android:layout_below="@+id/button5"
         android:background="@android:color/holo_red_dark"
+        android:onClick="displayToast"
         android:text="capstone: my own app"
-        android:textColor="@android:color/white"
-        android:onClick="ownToast"/>
+        android:textColor="@android:color/white" />
 </RelativeLayout>
